hb_task1b_ws/log/build_2023-10-02_13-42-22/hb_task_1b/stderr.log
  File "/home/ansuman/eyrc_hb/hb_task1b_ws/install/hb_task_1b/lib/python3.10/site-packages/hb_task_1b/controller.py", line 170
    ebot_controller.vel.angular.z=0.0s
                                    ^
SyntaxError: invalid decimal literal

